# edeas-blessing

./: Cargo.toml  LICENSE
src/: dice.rs  lib.rs  main.rs
